--- a/Lab7.vcxproj.filters
+++ b/Lab7.vcxproj.filters
@@ -1,23 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="Camera\camera.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Ball\ball.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="SimpleFragmentShader.fragmentshader" />
-    <None Include="SimpleVertexShader.vertexshader" />
-    <None Include="LightFragmentShader.fragmentshader" />
-    <None Include="LightVertexShader.vertexshader" />
-    <None Include="SimpleFragmentShaderJack.fragmentshader" />
-    <None Include="SimpleVertexShaderJack.vertexshader" />
-    <None Include="SimpleFragmentShaderPlane.fragmentshader" />
-    <None Include="SimpleVertexShaderPlane.vertexshader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera\camera.h" />
     <ClInclude Include="Ball\ball.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\LightFragmentShader.fragmentshader" />
+    <None Include="Shaders\LightVertexShader.vertexshader" />
+    <None Include="Shaders\SimpleFragmentShaderJack.fragmentshader" />
+    <None Include="Shaders\SimpleFragmentShaderPlane.fragmentshader" />
+    <None Include="Shaders\SimpleVertexShaderJack.vertexshader" />
+    <None Include="Shaders\SimpleVertexShaderPlane.vertexshader" />
+    <None Include="Shaders\SimpleFragmentShaderRed1.fragmentshader" />
+    <None Include="Shaders\SimpleVertexShaderRed1.vertexshader" />
   </ItemGroup>
 </Project>
