--- a/Lab7.vcxproj.filters
+++ b/Lab7.vcxproj.filters
@@ -19,5 +19,15 @@
     <None Include="Shaders\SimpleVertexShaderPlane.vertexshader" />
     <None Include="Shaders\SimpleFragmentShaderRed1.fragmentshader" />
     <None Include="Shaders\SimpleVertexShaderRed1.vertexshader" />
+    <None Include="Shaders\SimpleFragmentShaderBlue1.fragmentshader" />
+    <None Include="Shaders\SimpleVertexShaderBlue1.vertexshader" />
+    <None Include="Shaders\SimpleVertexShaderRed2.vertexshader" />
+    <None Include="Shaders\SimpleFragmentShaderRed2.fragmentshader" />
+    <None Include="Shaders\SimpleFragmentShaderBlue2.fragmentshader" />
+    <None Include="Shaders\SimpleVertexShaderBlue2.vertexshader" />
+    <None Include="Shaders\SimpleFragmentShaderRed3.fragmentshader" />
+    <None Include="Shaders\SimpleVertexShaderRed3.vertexshader" />
+    <None Include="Shaders\SimpleFragmentShaderBlue3.fragmentshader" />
+    <None Include="Shaders\SimpleVertexShaderBlue3.vertexshader" />
   </ItemGroup>
 </Project>
