--- a/Lab7.vcxproj
+++ b/Lab7.vcxproj
@@ -37,8 +37,10 @@
     <None Include="Shaders\SimpleFragmentShaderBlue2.fragmentshader" />
     <None Include="Shaders\SimpleFragmentShaderBlue3.fragmentshader" />
     <None Include="Shaders\SimpleFragmentShaderGrass.fragmentshader" />
+    <None Include="Shaders\SimpleFragmentShaderGrassTree.fragmentshader" />
     <None Include="Shaders\SimpleFragmentShaderJack.fragmentshader" />
     <None Include="Shaders\SimpleFragmentShaderPlane.fragmentshader" />
+    <None Include="Shaders\SimpleFragmentShaderPlaneTrunk.fragmentshader" />
     <None Include="Shaders\SimpleFragmentShaderRed1.fragmentshader" />
     <None Include="Shaders\SimpleFragmentShaderRed2.fragmentshader" />
     <None Include="Shaders\SimpleFragmentShaderRed3.fragmentshader" />
@@ -48,9 +50,11 @@
     <None Include="Shaders\SimpleVertexShaderGrass.vertexshader" />
     <None Include="Shaders\SimpleVertexShaderJack.vertexshader" />
     <None Include="Shaders\SimpleVertexShaderPlane.vertexshader" />
+    <None Include="Shaders\SimpleVertexShaderPlaneTrunk.vertexshader" />
     <None Include="Shaders\SimpleVertexShaderRed1.vertexshader" />
     <None Include="Shaders\SimpleVertexShaderRed2.vertexshader" />
     <None Include="Shaders\SimpleVertexShaderRed3.vertexshader" />
+    <None Include="Shaders\SimpleVertexShaderTree.vertexshader" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E8D7D48F-7AB1-4260-BCEC-8CC11D9FBC01}</ProjectGuid>
